overflow bug fix

--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -2,6 +2,7 @@
   position: relative;
   overflow: hidden;
   height: 969px;
+  width: 100vw
 }
 
 .hero-image {
